# fawnd

./: Cargo.toml  LICENSE  README.md  Trunk.toml  rules.example.toml
examples/: dump_depth.rs  dump_identity.rs
packaging/: fawnd.service
profiles/: gaming.toml
scripts/: install-service.sh
src/: config.rs  controller.rs  daemon.rs  device.rs  error.rs  ipc.rs  lib.rs  main.rs  rules.rs  watch.rs
src/gui/: api.rs  app.rs  mod.rs  worker.rs  worker_web.rs
src/protocol/: consts.rs  layout.rs  mod.rs  packet.rs
web/: index.html
